--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/LOGO.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="/" />
   <meta name="viewport" content="width=1024, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <title>Vite + React</title>
+  <title>ShashBlogs</title>
 </head>
 
 <body class="bg-slate-400">
